[package]
name = "metebow"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A brief description of your project"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/metebow"
readme = "README.md"

#[[lib]]
#name = "ssl_install_config"
#path = "src/ssl/ssl_install_config.rs"

[[bin]]
name = "ssl_install_config"
path = "src/ssl/ssl_install_config.rs"

[features]
default = ["std"]
std = []
ssl = ["dep:webpki", "dep:webpki-roots", "dep:ring"]
full = ["std", "ssl"]

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
local-ip-address = "0.6.3"
regex = "1.11.1"
actix-web = "4.9"
actix-files = "0.6.6"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
pcap = "2.2.0"
mdns-sd = "0.13.1"
ring = { version = "0.17.8", optional = true }
webpki = { version = "0.22.4", optional = true }
webpki-roots = { version = "0.26.6", optional = true }
async-trait = "0.1.83"
rand = "0.8.5"
log = "0.4.22"
env_logger = "0.11.5"
serde_yaml = "0.9.34"
dotenv = "0.15.0"
sysinfo = "0.33.0"
winapi = { version = "0.3.9", features = ["sysinfoapi", "winnt"] }

[dev-dependencies]
criterion = "0.5"
mockall = "0.13.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]